# reverseloom

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml  reverseloom-macos.spec  reverseloom.spec
.github/workflows/: release.yml
assets/: reverseloom.icns
docs/: development.md
scripts/: prepare_pybin.py
src/reverseloom/: __init__.py  __main__.py  config.py  persistence.py  session_store.py  settings_io.py
src/reverseloom/agent/: build.py  prompts.py
src/reverseloom/browser/: __init__.py  browser_manager.py  browser_snapshot.py  cdp_handler.py  coordinate_grid.py  discovery.py  element_geometry.py  element_mapping_service.py  fingerprint.py  get_interactive_elements.py  image_preprocess.py  image_utils.py  observer.py  proxy.py  session_manager.py
src/reverseloom/browser/dom/: __init__.py  service.py  views.py
src/reverseloom/browser/dom/serializer/: __init__.py  clickable_elements.py  paint_order.py  serializer.py
src/reverseloom/browser/sandbox_env/: package-lock.json  package.json  reverseloom-sandbox.bundle.js  reverseloom-sandbox.js  webpack.config.js
src/reverseloom/browser/sandbox_env/src/: config.js  engine.js
src/reverseloom/browser/sandbox_env/src/armor/: browser-apis.js  chrome-overlay.js  fingerprint.js  index.js  jsdom-hider.js  mark-native.js  node-hider.js
src/reverseloom/browser/sandbox_env/src/monitor/: cookie-trap.js  index.js  network-recorder.js  phantom-chain.js  proxy-factory.js  recorder.js
src/reverseloom/browser/sandbox_env/src/report/: reporter.js
src/reverseloom/conversation/: __init__.py  store.py
src/reverseloom/runtime/: __init__.py  checkpoints.py  config.py  paths.py  settings.py
src/reverseloom/skills/deep-reverse/: SKILL.md
src/reverseloom/skills/deep-reverse/references/: native-binding-trace.md  sandbox-reproduction.md
src/reverseloom/skills/web-crawl/: SKILL.md
src/reverseloom/skills/web-crawl/references/: crawler-engineering.md  data-output-validation.md  source-selection.md
src/reverseloom/static/: index.html
src/reverseloom/tools/: filesystem.py
src/reverseloom/tools/browser/: assistance.py  automation.py  investigation.py  result_handler.py  visual.py
src/reverseloom/web/: __init__.py  event_emitter.py  server.py
tests/: test_api.py  test_desktop_runtime.py  test_filesystem_tools.py  test_package_layout.py  test_persistence.py  test_prompts.py  test_session_store.py
