[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reverseloom"
version = "0.1.3"
description = "A local, open-source deep browser automation + web reverse-engineering agent with a desktop UI, woven on the graphloom agent framework."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "KuiChi-x" }]
keywords = ["agent", "browser-automation", "reverse-engineering", "llm", "graphloom", "cdp", "patchright"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "graphloom>=0.1.11",
    "langchain-openai",
    "langchain-anthropic",
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "aiohttp",
    "websockets",
    "patchright",
    "pywebview",
    "pillow",
    "numpy",
    "openpyxl",
    "lxml",
    "duckdb",
    "curl_cffi",
    "tldextract",
    "langgraph-checkpoint-sqlite",
    "SQLAlchemy",
    # Agent-generated crawlers are a core product capability, not an optional extra.
    "beautifulsoup4",
    "parsel",
    "loguru",
    "pycryptodome",
    "tenacity",
    "brotli",
    "python-dateutil",
    "protobuf",
    "imap-tools",
    "xlrd",
    "x-client-transaction-id",
]

[project.scripts]
reverseloom = "reverseloom.__main__:main"

[project.optional-dependencies]
postgres = ["langgraph-checkpoint-postgres>=2.0", "psycopg[binary,pool]>=3.1"]
dev = ["pytest>=7", "pytest-asyncio>=0.21", "ruff>=0.6", "pyinstaller", "tomli>=2.0; python_version < '3.11'"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
reverseloom = ["static/*", "skills/*/SKILL.md", "skills/*/references/*", "skills/*/scripts/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
